# clipman

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: clipboard.rs  error.rs  main.rs
